<resources>
    <string name="app_name">Controlio</string>
    <string name="title_action_support">Support</string>
    <string name="title_action_search">Search</string>
    <string name="title_action_settings">Settings</string>
    <string name="title_action_save">Save</string>
    <string name="title_action_info">Info</string>
    <string name="title_action_done">Done</string>
    <string name="title_action_edit">Edit</string>
    <string name="title_action_delete">Delete</string>
    <string name="title_action_finish_project">Finish project</string>
    <string name="title_action_revive_project">Revive project</string>
    <string name="title_action_leave_project">Leave project</string>
    <string name="title_action_delete_project">Delete project</string>
    <string name="title_action_edit_project">Edit project</string>
    <string name="title_action_redeem">Redeem</string>
    <string name="title_action_choose_image">Choose from library</string>
    <string name="title_action_take_photo">Take a photo</string>
    <string name="title_action_remove_photo">Remove photo</string>
    <string name="title_activity_all_projects">All projects</string>
    <string name="title_activity_new_project">New project</string>
    <string name="title_activity_add_clients">Add clients</string>
    <string name="title_activity_add_managers">Add managers</string>
    <string name="title_activity_posts">Posts</string>
    <string name="title_activity_support">Support</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_tab_all">All</string>
    <string name="title_tab_live">Live</string>
    <string name="title_tab_finished">Finished</string>
    <string name="title_prefs_root">Preferences</string>
    <string name="title_prefs_category_account">Account</string>
    <string name="title_prefs_edit_profile">Edit profile</string>
    <string name="title_prefs_plans">Plans</string>
    <string name="summary_prefs_plan_free">Free</string>
    <string name="summary_prefs_plan_five">$4.99</string>
    <string name="summary_prefs_plan_twenty">$19.99</string>
    <string name="summary_prefs_plan_fifty">$49.99</string>
    <string name="title_prefs_payment_methods">Payment methods</string>
    <string name="title_prefs_category_debug">Debug</string>
    <string name="title_prefs_log_out">Log out</string>
    <string name="title_prefs_api_url">API Url</string>
    <string name="label_placeholder_no_projects">You don\'t have any projects yet</string>
    <string name="label_placeholder_can_create_project">You can create your first project</string>
    <string name="label_placeholder_create_project">Create project</string>
    <string name="label_placeholder_no_posts">No posts yet</string>
    <string name="label_placeholder_no_posts_for_manager">Please create your first update</string>
    <string name="label_placeholder_no_posts_for_client">Managers should post updates here</string>
    <string name="label_magic_link">Magic link</string>
    <string name="label_use_it_to_login">Use it to login</string>
    <string name="label_signin">Sign In</string>
    <string name="label_signup">Sign Up</string>
    <string name="label_try_demo">Would you like to try our demo account?</string>
    <string name="label_password_recovery">Password recovery</string>
    <string name="label_nothing_here_yet">Nothing here yet</string>
    <string name="label_i_am_a">I am a: </string>
    <string name="label_manager">Manager</string>
    <string name="label_status_changed">Status changed: %1$s</string>
    <string name="label_post_edited">(edited) %1$s</string>
    <string name="label_owner">Owner</string>
    <string name="label_owner_invited">Owner invited</string>
    <string name="label_managers">Managers</string>
    <string name="label_managers_invited">Managers invited</string>
    <string name="label_clients">Clients</string>
    <string name="label_clients_invited">Clients invited</string>
    <string name="label_finished">Finished</string>
    <string name="label_no_name">No name provided</string>
    <string name="label_no_phone">No phone provided</string>
    <string name="label_support">If you have any questions or suggestions for our platform – don\'t hesitate to contact me</string>
    <string name="label_nikita">Nikita Kolmogorov</string>
    <string name="label_founder">Founder at Controlio</string>
    <string name="label_at_borodutch">\@borodutch</string>
    <string name="label_borodutch">borodutch</string>
    <string name="label_invite_to_manage">%1$s invited you to manage \"%2$s\"</string>
    <string name="label_invite_client">%1$s invited you as a client to \"%2$s\"</string>
    <string name="label_invite_owner">%1$s invited you as a owner to \"%2$s\"</string>
    <string name="label_free">Free</string>
    <string name="label_five">$4.99/month</string>
    <string name="label_twenty">$19.99/month</string>
    <string name="label_fifty">$49.99/month</string>
    <string name="label_1_project_month">1 active project/month</string>
    <string name="label_5_projects_month">5 active projects/month</string>
    <string name="label_20_projects_month">20 active projects/month</string>
    <string name="label_50_projects_month">50 active projects/month</string>
    <string name="label_contact_us">If you need more than 50 projects, please contact us at: sales@controlio.co  And don‘t worry, you can upgrade, downgrade or cancel your plan at any time!</string>
    <string name="label_card_ending"><![CDATA[<b>%1$s</b> ending in <b>%2$s</b>]]></string>
    <string name="label_add_new_card">Add new card…</string>
    <string name="link_try_demo">Want to see how Controlio works first?</string>
    <string name="link_usual_login">Or want a usual login?</string>
    <string name="link_forgot_password">Forgot your password?</string>
    <string name="link_invite_more_managers">Invite more managers</string>
    <string name="link_invite_more_clients">Invite more clients</string>
    <string name="btn_get_magic_link">Get magic link!</string>
    <string name="btn_signup">Sign up</string>
    <string name="btn_signin">Sign in</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="btn_client">Client</string>
    <string name="btn_business">Business</string>
    <string name="btn_add">Add</string>
    <string name="btn_create">Create</string>
    <string name="btn_new_message">New message</string>
    <string name="btn_change_status">Change status</string>
    <string name="btn_send">Send</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_edit_photo">Edit photo</string>
    <string name="btn_add_photo">Add photo</string>
    <string name="btn_plan_upgrade">Upgrade</string>
    <string name="btn_plan_downgrade">Downgrade</string>
    <string name="btn_plan_your_plan">Your plan</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_project_title">* Project title</string>
    <string name="hint_project_description">Project description</string>
    <string name="hint_initial_status">Initial status</string>
    <string name="hint_managers_email">* Manager\'s email</string>
    <string name="hint_clients_emails">Client\'s emails</string>
    <string name="hint_type_new_message">Type new message…</string>
    <string name="hint_type_new_status">Type new status…</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_coupon">Coupon</string>
    <string name="hint_search">Search for projects…</string>
    <string name="switch_progress_bar_enabled">Progress bar enabled</string>
    <string name="shortcut_new_project_id">new_project</string>
    <string name="shortcut_new_project_short_label">New project</string>
    <string name="shortcut_new_project_long_label">Create a new project</string>
    <string name="shortcut_settings_id">settings</string>
    <string name="shortcut_settings_short_label">Settings</string>
    <string name="shortcut_settings_long_label">Open settings</string>
    <string name="shortcut_support_id">support</string>
    <string name="shortcut_support_short_label">Support</string>
    <string name="shortcut_support_long_label">Support</string>
    <string name="shortcuts_disabled_message">Login in Controlio to open this</string>
    <string name="action_delete">Delete</string>
    <string name="snackbar_message_check_inbox_magic_link">Check your inbox. Magic link is on it\'s way!</string>
    <string name="snackbar_message_check_inbox_reset_password">Check your inbox. Reset password link is on it\'s way!</string>
    <string name="snackbar_action_hide">Hide</string>
    <string name="snackbar_message_project_created">You have successfully created a project</string>
    <string name="snackbar_message_invite_accepted">You have accepted the invite to \"%1$s\"</string>
    <string name="snackbar_message_invite_rejected">You have rejected the invite to \"%1$s\"</string>
    <string name="snackbar_message_post_deleted">Post deleted</string>
    <string name="snackbar_action_undo">Undo</string>
    <string name="snackbar_message_message_sent">Message sent</string>
    <string name="snackbar_message_message_changed">Message changed</string>
    <string name="snackbar_message_status_has_been_changed">Status has been changed</string>
    <string name="snackbar_message_status_changed">Status changed</string>
    <string name="snackbar_message_managers_added">Managers were successfully added</string>
    <string name="snackbar_message_clients_added">Clients were successfully added</string>
    <string name="snackbar_message_project_changed">Project info has been changed</string>
    <string name="snackbar_message_manager_deleted">%1$s has been removed from managers</string>
    <string name="snackbar_message_client_deleted">%1$s has been removed from clients</string>
    <string name="snackbar_message_invite_revoked">Invite for %1$s has been revoked</string>
    <string name="snackbar_message_profile_updated">Your profile has been updated</string>
    <string name="snackbar_message_password_set">Your password has been successfully set</string>
    <string name="snackbar_message_password_reset">Your password has been successfully reset</string>
    <string name="snackbar_message_card_deleted">Card has been removed</string>
    <string name="snackbar_message_coupon_applied">Coupon has been applied</string>
    <string name="progress_message_request_magic_link">Request magic link…</string>
    <string name="progress_message_creating_account">Creating account…</string>
    <string name="progress_message_authenticating">Authenticating…</string>
    <string name="progress_message_recover_account">Recover account…</string>
    <string name="progress_message_adding_new_project">Adding a new project…</string>
    <string name="progress_message_accepting_invite">Accepting the invite…</string>
    <string name="progress_message_rejecting_invite">Rejecting the invite…</string>
    <string name="progress_message_creating_new_post">Creating a new post…</string>
    <string name="progress_message_editing_post">Editing post…</string>
    <string name="progress_message_changing_status">Changing status of project…</string>
    <string name="progress_message_editing_status">Editing status of project…</string>
    <string name="progress_message_getting_project_info">Getting project info…</string>
    <string name="content_description_project_image">Project image</string>
    <string name="content_description_founder_photo">Founder photo</string>
    <string name="content_description_icon_telegram">Icon Telegram</string>
    <string name="content_description_icon_facebook_messenger">Icon Facebook Messenger</string>
</resources>