<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activities.ProjectInfo">

    <item
        android:id="@+id/action_finish_project"
        android:title="@string/title_action_finish_project"
        android:orderInCategory="1"
        android:visible="false"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_revive_project"
        android:title="@string/title_action_revive_project"
        android:orderInCategory="1"
        android:visible="false"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_leave_project"
        android:title="@string/title_action_leave_project"
        android:orderInCategory="2"
        android:visible="false"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_delete_project"
        android:title="@string/title_action_delete_project"
        android:orderInCategory="2"
        android:visible="false"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_edit_project"
        android:title="@string/title_action_edit_project"
        android:orderInCategory="3"
        android:visible="false"
        app:showAsAction="never"
        />

</menu>