<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activities.MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/title_action_search"
        android:orderInCategory="1"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />

    <item
        android:id="@+id/action_support"
        android:title="@string/title_action_support"
        android:orderInCategory="2"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_settings"
        android:title="@string/title_action_settings"
        android:orderInCategory="3"
        app:showAsAction="never"
        />

</menu>