<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
    </data>

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.SupportActivity"
        tools:showIn="@layout/activity_support"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/text_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textColor="#585d6c"
                android:textSize="16sp"
                android:text="@string/label_support"
                />

            <ImageView
                android:id="@+id/image_nikita"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_support"
                android:scaleType="centerInside"
                android:src="@drawable/nikita"
                android:contentDescription="@string/content_description_founder_photo"
                />

            <TextView
                android:id="@+id/text_nikita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/image_nikita"
                app:layout_constraintLeft_toRightOf="@+id/image_nikita"
                android:fontFamily="sans-serif-medium"
                android:text="@string/label_nikita"
                />

            <TextView
                android:id="@+id/text_founder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintLeft_toRightOf="@+id/image_nikita"
                app:layout_constraintBottom_toBottomOf="@+id/image_nikita"
                android:textColor="#805b606f"
                android:textSize="14sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/label_founder"
                />

        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#145b5f6e"
            />

        <LinearLayout
            android:id="@+id/linear_telegram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:background="@null"
            >

            <ImageView
                android:id="@+id/icon_telegram"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_telegram"
                android:contentDescription="@string/content_description_icon_telegram"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/label_at_borodutch"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"
            android:background="@android:color/darker_gray"
            />

        <LinearLayout
            android:id="@+id/linear_facebook_messenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:background="@null"
            >

            <ImageView
                android:id="@+id/icon_facebook"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_facebook_messenger"
                android:contentDescription="@string/content_description_icon_facebook_messenger"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/label_borodutch"
                />

        </LinearLayout>
    </LinearLayout>
</layout>